; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_39445.c_auth_moremem.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_39445.c_auth_moremem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.savekey = type { i32 }

@MEMINC = common dso_local global i32 0, align 4
@authfreekeys = common dso_local global i32 0, align 4
@authnumfreekeys = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @auth_moremem() #0 {
  %1 = alloca i32, align 4
  %2 = alloca %struct.savekey*, align 8
  %3 = alloca i32, align 4
  %4 = load i32, i32* @MEMINC, align 4
  %5 = call i64 @calloc(i32 %4, i32 4)
  %6 = inttoptr i64 %5 to %struct.savekey*
  store %struct.savekey* %6, %struct.savekey** %2, align 8
  %7 = load %struct.savekey*, %struct.savekey** %2, align 8
  %8 = icmp eq %struct.savekey* %7, null
  br i1 %8, label %9, label %10

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %30

10:                                               ; preds = %0
  %11 = load i32, i32* @MEMINC, align 4
  store i32 %11, i32* %3, align 4
  br label %12

12:                                               ; preds = %22, %10
  %13 = load i32, i32* %3, align 4
  %14 = icmp sgt i32 %13, 0
  br i1 %14, label %15, label %25

15:                                               ; preds = %12
  %16 = load i32, i32* @authfreekeys, align 4
  %17 = load %struct.savekey*, %struct.savekey** %2, align 8
  %18 = getelementptr inbounds %struct.savekey, %struct.savekey* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load %struct.savekey*, %struct.savekey** %2, align 8
  %20 = getelementptr inbounds %struct.savekey, %struct.savekey* %19, i32 1
  store %struct.savekey* %20, %struct.savekey** %2, align 8
  %21 = ptrtoint %struct.savekey* %19 to i32
  store i32 %21, i32* @authfreekeys, align 4
  br label %22

22:                                               ; preds = %15
  %23 = load i32, i32* %3, align 4
  %24 = add nsw i32 %23, -1
  store i32 %24, i32* %3, align 4
  br label %12

25:                                               ; preds = %12
  %26 = load i32, i32* @MEMINC, align 4
  %27 = load i32, i32* @authnumfreekeys, align 4
  %28 = add nsw i32 %27, %26
  store i32 %28, i32* @authnumfreekeys, align 4
  %29 = load i32, i32* @authnumfreekeys, align 4
  store i32 %29, i32* %1, align 4
  br label %30

30:                                               ; preds = %25, %9
  %31 = load i32, i32* %1, align 4
  ret i32 %31
}

declare dso_local i64 @calloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
